--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>我的履歷(Vite+React+TS)</title>
   </head>
   <body>
     <div id="root"></div>
+    
+    <!-- 導入 FONT AWESOME 資源 -->
+    <script src="https://kit.fontawesome.com/7f5b494958.js"></script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
